--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,8 +181,8 @@ h3 {
     display: block;
     border: none;
     background: transparent;
-    width: 22px; /* Новый размер ширины */
-    height: 14px; /* Новый размер высоты */
+    width: 22px;
+    height: 14px;
 }
 
 .burger::before,
@@ -192,14 +192,14 @@ h3 {
     position: absolute;
     display: block;
     width: 100%;
-    height: 2px; /* Уменьшена толщина линий (было 4px) */
-    border-radius: 5px; /* Уменьшен радиус скругления (было 10px) */
+    height: 2px;
+    border-radius: 5px;
     background: #BFBFBF;
 }
 
 .burger::before {
     top: 0;
-    box-shadow: 0 6px 0 #BFBFBF; /* Уменьшено расстояние для тени (было 11px) */
+    box-shadow: 0 6px 0 #BFBFBF;
     transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
 }
 
@@ -209,15 +209,15 @@ h3 {
 }
 
 .burger-checkbox:checked + .burger::before {
-    top: 6px; /* Уменьшено расстояние для поворота (было 11px) */
+    top: 6px;
     transform: rotate(45deg);
     background: black;
-    box-shadow: 0 0 0 rgba(0, 0, 0, 0); /* Убрана тень при активации */
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
     transition: box-shadow .15s, top .3s, transform .3s .15s;
 }
 
 .burger-checkbox:checked + .burger::after {
-    bottom: 6px; /* Уменьшено расстояние для поворота (было 11px) */
+    bottom: 6px;
     background: black;
     transform: rotate(-45deg);
     transition: bottom .3s, transform .3s .15s;
@@ -724,7 +724,7 @@ h3 {
     flex-direction: column;
     gap: 20px;
     width: 100%;
-    max-width: 100%; /* Ограничивает ширину контейнера */
+    max-width: 100%;
 }
 
 .rating-container {
@@ -733,32 +733,33 @@ h3 {
     background: white;
     padding: 16px;
     height: 109px;
-    overflow-x: auto; /* Переносим прокрутку сюда для большей точности */
-    scrollbar-width: thin; /* Для Firefox */
+    overflow-x: auto;
+    scrollbar-width: thin;
 }
 
 .rating-container::-webkit-scrollbar {
-    height: 8px; /* Тонкая полоса прокрутки для WebKit-браузеров */
+    height: 8px;
 }
 
 .rating-container::-webkit-scrollbar-thumb {
-    background-color: #888; /* Цвет ползунка */
+    background-color: #888;
     border-radius: 4px;
 }
 
 .progress-container {
-    width: max-content; /* Позволяет прогресс-бару быть шире контейнера */
     height: 20px;
     position: relative;
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 .progress-bar {
     display: flex;
     height: 100%;
     transform: translateY(10px);
-    min-width: 1000px; /* Установите минимальную ширину, чтобы прогресс-бар был шире экрана */
+    min-width: 1000px;
+    width: 100%;
 }
 
 .segment {
